--- a/social-media-analytics/index.html
+++ b/social-media-analytics/index.html
@@ -1,1 +1,16 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Social Media Analytics</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <h1>Social Media Analytics</h1>
+  <div id="analytics">
+    <p>Likes: <span id="likes">0</span></p>
+    <p>Comments: <span id="comments">0</span></p>
+    <p>Followers: <span id="followers">0</span></p>
+  </div>
+  <script src="script.js"></script>
+</body>
+</html>
